--- a/app/assets/stylesheets/blocks/admin/_admin-table.sass
+++ b/app/assets/stylesheets/blocks/admin/_admin-table.sass
@@ -55,7 +55,8 @@
   overflow: hidden
 
 .admin-table__user-icon
-  +size(2.75rem auto)
+  +size(2.75rem)
+  object-fit: cover
   border-radius: 50%
   +inline-block
   margin-right: .5rem
