--- a/app/assets/stylesheets/blocks/report/_recent-reports.sass
+++ b/app/assets/stylesheets/blocks/report/_recent-reports.sass
@@ -54,11 +54,10 @@
 
 .recent-reports__to-index
   width: 100%
-  background-color: $side
+  background-color: #342c69
   padding: 1rem .75rem
-  border-bottom: solid 1px $side-border
   transition: color .2s ease-in, background-color .2s ease-in
   +position(absolute, bottom 0)
   +text-block(.8125rem 1, block $reversal-text center)
   &:hover
-    background-color: $side-shade
+    background-color: #262144
