--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -5,7 +5,7 @@
     .auth-form-item
       // ユーザー名
       = f.label :login_name, class: "a-sm-label is-required"
-      = f.text_field :login_name, class: "a-sm-text-input", autocomplete: :off, placeholder: "komagata"
+      = f.text_field :login_name, class: "a-sm-text-input", autocomplete: :nope, placeholder: "komagata"
       .auth-form-item__help
         p
           | チャットやSNS（Twitter、GitHub、ブログ など）でユーザー名が異なると個人を認識するのが困難になります。極力ユーザー名は統一するようにしてください。サービスによっては半角英数しか使えないサービスが多いので、半角英数をおすすめします。
@@ -171,10 +171,10 @@
           p URL を入力。
     .auth-form-item
       = f.label :password, class: "a-sm-label is-required"
-      = f.password_field :password, class: "a-sm-text-input", autocomplete: :off
+      = f.password_field :password, class: "a-sm-text-input", autocomplete: :nope
     .auth-form-item
       = f.label :password_confirmation, class: "a-sm-label is-required"
-      = f.password_field :password_confirmation, class: "a-sm-text-input", autocomplete: :off
+      = f.password_field :password_confirmation, class: "a-sm-text-input", autocomplete: :nope
       .auth-form-item__help
         p パスワードをもう一度入力
     - if admin_login?
