プラクティス編集のデザイン崩れを修正

--- a/app/views/practices/edit.html.slim
+++ b/app/views/practices/edit.html.slim
@@ -6,5 +6,6 @@
     .page-header__container
       h1.page-header__title
         = title
-.container
-  = render "form", practice: @practice
+.page-body
+  .container
+    = render "form", practice: @practice
