--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -5,7 +5,10 @@
   header.auth-form__header
     h1.auth-form__title = title
   .auth-form__body
-    p 現在新規登録を停止しております。４月に再開予定です。
+    - if @user.adviser?
+      = render "form", from: :new, url: users_path, user: @user
+    - else
+      p 現在新規登録を停止しております。４月に再開予定です。
   footer.auth-form__footer
     nav.auth-form-nav
       ul.auth-form-nav__items
