リアクションの追加

--- a/app/views/announcements/_announcement.html.slim
+++ b/app/views/announcements/_announcement.html.slim
@@ -14,7 +14,7 @@
     .thread-body
       .thread__description.js-target-blank.is-long-text-style.js-markdown-view
         = announcement.description
-
+      = render "reactions/reactions", reactionable: @announcement
       - if @announcement.user_id == current_user.id
         .card-footer
           .card-footer-actions
