--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -19,7 +19,7 @@
         = l answer.updated_at
     .thread-comment__description.js-markdown-view.js-target-blank.is-long-text-style
       = answer.description
-
+    = render "reactions/reactions", reactionable: answer
     footer.card-footer
       .card-footer-actions
         ul.card-footer-actions__items
