--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -5,7 +5,7 @@
   header.auth-form__header
     h1.auth-form__title = title
   .auth-form__body
-    - if @user.adviser?
+    - if @user.adviser? || params[:training]
       = render "form", from: :new, url: users_path, user: @user
     - else
       p 現在新規登録を停止しております。４月に再開予定です。
