利用規約を追加

--- a/app/views/home/_about.slim
+++ b/app/views/home/_about.slim
@@ -14,6 +14,7 @@ section.welcome-section.is-about#about
           section.welcome-side-image-sections
             h4.welcome-side-image-sections__title
               | 学習
+              | aaa
             .welcome-side-image-sections__body
               section.welcome-side-image-section
                 .welcome-side-image-section__inner
