ナビのjsを削除し、cssで実装

--- a/app/assets/stylesheets/atoms/_form.sass
+++ b/app/assets/stylesheets/atoms/_form.sass
@@ -116,3 +116,10 @@ textarea.a-sm-text-input
     transition: all .2s ease-out
     &:hover
       background-color: #e8e8e8
+
+.a-toggle-checkbox
+  +size(0)
+  display: block
+  +position(absolute, left 0, top 0)
+  opacity: 0
+  overflow: hidden
