--- a/app/views/application/_global_nav.slim
+++ b/app/views/application/_global_nav.slim
@@ -1,4 +1,6 @@
-nav.global-nav.js-show-mobile-nav__target.js-show-mobile-nav
+input.a-toggle-checkbox#mobile-nav(type="checkbox")
+nav.global-nav
+  label.global-nav__background(for="mobile-nav")
   .global-nav__inner
     - if current_user
       .global-nav-current-user
