--- a/app/views/application/_notifications.html.slim
+++ b/app/views/application/_notifications.html.slim
@@ -1,13 +1,15 @@
-.header-drop-down.js-drop-down__target
-  ul.header-drop-down__items
-    - current_user.notifications.unreads.each do |notification|
-      li.header-drop-down__item
-        = link_to notification, class: "header-drop-down__item-link" do
-          .header-notifications-item__body
-            = render "notification_sender", sender: notification.sender
-            .header-notifications-item__message
-              p
-                = notification.message
-            time.header-notifications-item_created-at
-              = time_ago_in_words(notification.created_at) + "前"
-  .header-drop-down__overlay.js-drop-down__trigger
+input.a-toggle-checkbox(type="checkbox" id="#{toggle_id}")
+.header-dropdown
+  label.header-dropdown__background(for="#{toggle_id}")
+  .header-dropdown__inner.is-notification
+    ul.header-dropdown__items
+      - current_user.notifications.unreads.each do |notification|
+        li.header-dropdown__item
+          = link_to notification, class: "header-dropdown__item-link" do
+            .header-notifications-item__body
+              = render "notification_sender", sender: notification.sender
+              .header-notifications-item__message
+                p
+                  = notification.message
+              time.header-notifications-item_created-at
+                = time_ago_in_words(notification.created_at) + "前"
