--- a/app/assets/stylesheets/blocks/header/_header.sass
+++ b/app/assets/stylesheets/blocks/header/_header.sass
@@ -21,77 +21,6 @@ $header-height: 3.125rem
   +media-breakpoint-down(sm)
     height: 1.5rem
 
-.header-links
-  height: 100%
-  display: flex
-  align-items: center
-  +media-breakpoint-down(sm)
-    display: none
-
-.header-links__items
-  display: flex
-  height: 100%
-
-.header-links__item
-  display: flex
-  height: 100%
-  border-left: solid $background-color .0625rem
-  +position(relative)
-  transition: color .2s ease-in, background-color .2s ease-in
-
-.header-links__link
-  +flex-link
-  flex-direction: column
-  +size(3.5rem 100%)
-  align-items: center
-  justify-content: center
-  +text-block(1.375rem 1, #b9b9b9)
-  +position(relative)
-  transition: all .2s ease-in
-  &:hover
-    background-color: #f8f8f8
-    color: $default-text
-  .header-links__item.has-no-count &
-    pointer-events: none
-  .header-links__item.has-count &
-    color: $default-text
-    cursor: pointer
-  &.is-active
-    background-color: $warning
-    color: $main-color
-
-.header-links__link-label
-  +text-block(.625rem 1)
-  margin-top: .375rem
-  transform: scale(.9)
-
-.header-links__link-count
-  +position(right .25rem, top .25rem)
-
-.header-search
-  display: flex
-  height: 100%
-  align-items: center
-  padding-right: .75rem
-
-.header-search__select
-  &.is-select
-    height: 2rem
-    +border-radius(right, 0)
-    border-right: none
-    select
-      +padding(horizontal, .75rem 2rem)
-
-.header-search__text-input
-  height: 2rem
-  border-radius: 0
-  border-right: none
-
-.is-icon.header-search__submit
-  +size(2rem)
-  +border-radius(left, 0)
-  font-size: 1rem
-
 .header-show-mobile-nav
   display: none
   cursor: pointer
@@ -101,6 +30,9 @@ $header-height: 3.125rem
   width: 3rem
   +position(relative)
   display: flex
+
+.header-notifications-item__body
+  width: 100%
 
 .header-notification-icon
   +text-block(1.25rem 1, center)
