--- a/app/assets/stylesheets/blocks/shared/_global-nav.sass
+++ b/app/assets/stylesheets/blocks/shared/_global-nav.sass
@@ -8,11 +8,23 @@ $global-nav-width: 5rem
     width: 0
     cursor: pointer
     transition: background-color .4s ease-in
-    &.is-active
-      background-color: rgba(black, .6)
+    input:checked + &
       opacity: 1
       width: 100%
       display: block
+
+.global-nav__background
+  +position(fixed, left 0, top 0, bottom 0, 1)
+  background-color: rgba(black, .6)
+  opacity: 1
+  height: 100%
+  width: 0
+  display: inline
+  opacity: 0
+  input:checked + .global-nav &
+    opacity: 1
+    width: 100%
+    display: block
 
 .global-nav__inner
   background-color: $side
@@ -21,9 +33,9 @@ $global-nav-width: 5rem
   +media-breakpoint-down(sm)
     transition: left .2s ease-out
     width: 12rem
-    overflow: hidden
+    overflow-y: auto
     left: -12rem
-    .global-nav.is-active &
+    input:checked + .global-nav &
       left: 0
       >*
         width: 12rem
@@ -79,5 +91,4 @@ $global-nav-width: 5rem
     font-size: .875rem
 
 .global-nav__item-count
-  right: 0.0625rem
-  top: 0.0625rem
+  +position(right .25rem, top .25rem)
