--- a/app/views/application/_header.html.slim
+++ b/app/views/application/_header.html.slim
@@ -9,55 +9,18 @@ header.header
           .user-part.is-header(class="is-adviser") アドバイザー
         - if current_user.admin?
           .user-part.is-header(class="is-admin") 管理者
-      .header-links.is-user-links
-        ul.header-links__items
-          li
-            = form_tag searchables_url, method: "get", class: "header-search", name: "search" do
-              .header-search__select.is-button-simple-sm-secondary.is-select.is-block
-                = select_tag "document_type", options_for_select(Searcher::DOCUMENT_TYPES, params[:document_type])
-              = text_field_tag "word", params[:word], class: "a-xs-text-input header-search__text-input", placeholder: "検索"
-              button.is-button-simple-sm-secondary.is-icon.header-search__submit#test-search(type="submit")
-                i.fas.fa-search
-          - if current_user.admin?
-            li.header-links__item
-              = link_to admin_root_path, class: "header-links__link #{current_link /^admin/}" do
-                i.fab.fa-font-awesome-flag
-                .header-links__link-label 管理
-            li.header-links__item
-              = link_to "https://github.com/fjordllc/bootcamp/projects/1", class: "header-links__link", target: "_blank" do
-                i.fab.fa-github-alt
-                .header-links__link-label GitHub
-          li.header-links__item(class="#{current_user.notifications.unreads.count > 0 ? "js-drop-down has-count" : "has-no-count"}")
-            .header-links__link.js-drop-down__trigger.test-bell
-              .header-notification-icon
-                - if current_user.notifications.unreads.count > 0
-                  .header-notification-count.a-notification-count
-                    = current_user.notifications.unreads.count
-                i.fas.fa-bell
-                .header-links__link-label 通知
-            - if current_user.notifications.unreads.exists?
-              = render "application/notifications"
-          li.header-links__item
-            = link_to edit_current_user_path, class: "header-links__link" do
-              i.fas.fa-cog
-              .header-links__link-label 設定
-          li.header-links__item
-            = link_to courses_path, class: "header-links__link" do
-              i.fas.fa-graduation-cap
-              .header-links__link-label コース
-          li.header-links__item
-            = link_to logout_path, class: "header-links__link" do
-              i.fas.fa-sign-out-alt
-              .header-links__link-label ログアウト
+      = render "header_links"
+
       .header-show-mobile-nav-items
-        .header-show-mobile-nav(class="#{current_user.notifications.unreads.count > 0 ? "js-drop-down has-count" : "has-no-count"}")
-          .header-links__link.js-drop-down__trigger
+        .header-show-mobile-nav(class="#{current_user.notifications.unreads.count > 0 ? "has-count" : "has-no-count"}")
+          - toggle_id = "header-notification-mobile"
+          label.header-links__link(for="#{toggle_id}")
             .header-notification-icon
               - if current_user.notifications.unreads.count > 0
                 .header-notification-count
                   = current_user.notifications.unreads.count
               i.fas.fa-bell
           - if current_user.notifications.unreads.exists?
-            = render "application/notifications"
-        .header-show-mobile-nav.js-show-mobile-nav
+            = render "application/notifications", toggle_id: toggle_id
+        label.header-show-mobile-nav(for="mobile-nav")
           i.fas.fa-bars
