--- a/app/views/application/_header_links.html.slim
+++ b/app/views/application/_header_links.html.slim
@@ -8,7 +8,7 @@
         button.is-button-simple-sm-secondary.is-icon.header-search__submit#test-search(type="submit")
           i.fas.fa-search
     li.header-links__item
-      label.header-links__link(for="header-menu")
+      label.header-links__link.test-show-menu(for="header-menu")
         i.fas.fa-bars
         .header-links__link-label MENU
       input.a-toggle-checkbox#header-menu(type="checkbox")
@@ -34,7 +34,7 @@
                 | ログアウト
     li.header-links__item(class="#{current_user.notifications.unreads.count > 0 ? "has-count" : "has-no-count"}")
       - toggle_id = "header-notification-pc"
-      label.header-links__link(for="#{toggle_id}")
+      label.header-links__link.test-show-notifications(for="#{toggle_id}")
         .header-links__link.test-bell
           .header-notification-icon
             - if current_user.notifications.unreads.count > 0
