--- a/app/assets/stylesheets/blocks/user/_users.sass
+++ b/app/assets/stylesheets/blocks/user/_users.sass
@@ -1,9 +1,12 @@
+.users
+  margin-bottom: -1.5rem
+
 .users-item
   padding-bottom: 1.5rem
   height: 100%
 
 .users-item.inactive
-  opacity: 0.5
+  opacity: .5
 
 .users-item__inner
   height: 100%
