--- a/app/assets/stylesheets/welcome/_welcome.sass
+++ b/app/assets/stylesheets/welcome/_welcome.sass
@@ -126,6 +126,8 @@ body.home-welcome
   margin-top: 3.5rem
   +media-breakpoint-down(sm)
     margin-top: 0
+    .row.is-gutter-width-64
+      +margin(horizontal, -1rem)
 
 .welcome-section__faqs
   max-width: 40rem
