--- a/app/views/home/_faq.slim
+++ b/app/views/home/_faq.slim
@@ -81,5 +81,4 @@ section.welcome-section.is-faq#faq
           p
             | カリキュラムが、最新のMacのOSを想定して作られています。多少古い場合はどうにかなるかもしれませんが、OSのせいで学習に詰まることが出てくるかもしれません。何かしら事情があってお手持ちのMacのバージョンが上げられない場合は、それとは別のMacを用意してから参加申し込みをお願いします。
 
-    .welcome-section__action
-      = link_to "質問はこちらから", new_inquiry_path
+    = link_to "質問はこちらから", new_inquiry_path, class: "welcome-section__action"
