--- a/app/assets/stylesheets/blocks/reaction/_reaction.sass
+++ b/app/assets/stylesheets/blocks/reaction/_reaction.sass
@@ -1,7 +1,7 @@
 .reactions
   display: flex
   justify-content: space-between
-  border-top: 1px solid #e6e6e6
+  border-top: 1px solid $background-color
   line-height: 2.4
   position: relative
   user-select: none
@@ -11,40 +11,40 @@
       cursor: pointer
       display: inline-block
       padding: 0 9px 0 14px
-      border-right: 1px solid #e6e6e6
+      border-right: 1px solid $background-color
       &.is-reacted
-        background: #f7f7f7
+        background-color: #f7f7f7
       &:hover
-        background: #f2f2f2
+        background-color: #f2f2f2
     .reaction-count
       margin: 0 3px 0 5px
       font-size: .95rem
       vertical-align: top
   .reaction-dropdown
     .reaction-dropdown-toggle
+      +size(3rem 2.375rem)
+      +text-block(1.25rem 1, flex)
       cursor: pointer
-      display: inline-block
-      padding: 0 12px
+      display: flex
+      align-items: center
+      justify-content: center
       color: $main-color
-      border-left: 1px solid #e6e6e6
-      border-right: 1px solid #e6e6e6
+      border-left: 1px solid $background-color
+      border-bottom-right-radius: .25rem
       .fa-plus
-        font-size: .9rem
-        margin-right: 6px
+        font-size: .4em
+        margin-right: .3em
       &:hover
         background: #f2f2f2
     .reaction
-      position: absolute
-      right: 0
-      top: 38px
+      +position(absolute, right  0, top 2.375rem, 1)
       width: 181px
-      background: #fff
-      z-index: 1
-      border-top: 1px solid #e6e6e6
-      border-left: 1px solid #e6e6e6
+      background-color: $base
+      border-top: 1px solid $background-color
+      border-left: 1px solid $background-color
       border-bottom-left-radius: .4rem
       border-bottom-right-radius: .4rem
       li
-        border-right: 1px solid #e6e6e6
-        border-bottom: 1px solid #e6e6e6
+        border-right: 1px solid $background-color
+        border-bottom: 1px solid $background-color
         width: 45px
