--- a/app/views/home/_welcome_footer.slim
+++ b/app/views/home/_welcome_footer.slim
@@ -1,7 +1,7 @@
 footer.welcome-footer
   .container
     small.welcome-footer-copyright
-      i.fas.fa-copyright
+      i.far.fa-copyright
       span.welcome-footer-copyright__author
         | FJORD,LLC.
       = Date.today.year
