--- a/app/views/reports/show.html.slim
+++ b/app/views/reports/show.html.slim
@@ -83,7 +83,7 @@ header.page-header
                     = f.submit "日報を確認する", class: "report-check-form__action is-button-simple-md-danger"
                 - else
                   = form_for @checks.last, url: check_path(@checks.last), method: :delete, html: { class: "report-check-form" } do |f|
-                    = f.submit "日報の確認を取り消す", class: "report-check-form__action is-button-simple-md-danger"
+                    = f.submit "日報の確認を取り消す", class: "thread-check-form__action is-text"
 
       .thread-prev-next
         .thread-prev-next__item
