--- a/app/views/users/practices/_active_practices.html.slim
+++ b/app/views/users/practices/_active_practices.html.slim
@@ -1,5 +1,5 @@
 .a-card
-  header.card-header
+  header.card-header.is-sm
     h2.card-header__title
       | 進行中のプラクティス
   .card-practices.is-active
