--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -38,3 +38,6 @@ header.page-header
           - if @user.github_account
             .a-card
               = render "users/github_grass", user: @user
+          - if current_user.active_practices.present?
+            = render "/users/practices/active_practices", user: current_user
+          = render "/users/practices/completed_practices", user: current_user
