--- a/app/views/application/_global_nav.slim
+++ b/app/views/application/_global_nav.slim
@@ -54,7 +54,7 @@ nav.global-nav
             .global-nav-links__link-icon
               i.fas.fa-file
             .global-nav-links__link-label Wiki
-        li.global-nav-links__item
+        li.global-nav-links__item.is-hidden-md-up
           = link_to "https://docs.google.com/spreadsheets/d/1tRexM59inK1u5unRrNFNUNXXltiRQDNZZJf7X-M_G1E/edit#gid=2063800206", class: "global-nav-links__link", target: "_blank" do
             .global-nav-links__link-icon
               i.fas.fa-desktop
