--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -18,6 +18,9 @@ header.page-header
               .thread-list__footer-to-index
                 = link_to announcements_path, class: "thread-list__footer-text-link" do
                   | 全てのお知らせ
+          - if current_user.active_practices.present?
+            = render "/users/practices/active_practices", user: current_user
+          = render "/users/practices/completed_practices", user: current_user
 
         .col-xs-12.col-xl-6.col-xxl-6
           = render "users/grass", user: current_user
