--- a/app/views/users/practices/_completed_practices.html.slim
+++ b/app/views/users/practices/_completed_practices.html.slim
@@ -1,8 +1,8 @@
 .completed-practices.a-card
-  header.card-header
+  header.card-header.is-sm
     h2.card-header__title 完了したプラクティス
     .card-header__sub-title
-      = render "users/learning_status", user: @user
+      = render "/users/learning_status", user: user
   .completed-practices__body
-    = render "completed_practices_progress", user: @user
-    = render "completed_practices_list", user: @user
+    = render "/users/practices/completed_practices_progress", user: user
+    = render "/users/practices/completed_practices_list", user: user
