--- a/app/views/static_pages/thanks.html.slim
+++ b/app/views/static_pages/thanks.html.slim
@@ -4,7 +4,7 @@
     = image_tag("logo.svg", class: "thanks__logo-image")
   .thanks__body
     .thanks__icon
-      i.fas.fa-check-circle-o
+      i.fas.fa-check-circle
     h2.thanks__title
       | 送信完了
     .thanks__message
