スクロールをjsからcssに移行
ページのパーツの出し分けをリファクタ

フォームの並び順変更

Fix Typo

テストの画面外のボタンクリック対策

テストの画面外のボタンクリック対策

テストの画面外のボタンクリック対策

テストの画面外のボタンクリック対策

test時のcssを変更

Fix typo

スクロール設定修正

テストにスクロール追加

:cop:

テストにスクロール追加

db/schema.rb 更新

テスト修正

テスト修正

テスト修正

テスト修正

testのためのsassリファクタ

--- a/app/assets/stylesheets/blocks/practice/_categories.sass
+++ b/app/assets/stylesheets/blocks/practice/_categories.sass
@@ -4,12 +4,13 @@
   width: 100%
 
 .categories-items
-  max-width: 68rem
+  max-width: 58rem
+  flex: 100
   +margin(horizontal, auto)
-  padding-right: 14rem
   +position(relative)
-  +media-breakpoint-down(sm)
-    padding-right: 0
+  display: flex
+  justify-content: space-between
+  align-items: flex-start
 
 .categories-item
   &:not(:last-child)
