--- a/app/assets/stylesheets/welcome/_welcome-global-nav.sass
+++ b/app/assets/stylesheets/welcome/_welcome-global-nav.sass
@@ -2,6 +2,10 @@ $welcome-global-nav-height: 4rem
 
 .page__welcome-global-nav-container
   height: $welcome-global-nav-height
+  +media-breakpoint-up(md)
+    position: sticky
+    top: 0
+    z-index: 12
   +media-breakpoint-down(md)
     height: 0
 
