--- a/app/assets/stylesheets/welcome/_welcome.sass
+++ b/app/assets/stylesheets/welcome/_welcome.sass
@@ -127,7 +127,7 @@ body.home-welcome
   +media-breakpoint-down(sm)
     margin-top: 0
     .row.is-gutter-width-64
-      +margin(horizontal, -1rem)
+      +margin(horizontal, 0)
 
 .welcome-section__faqs
   max-width: 40rem
