--- a/app/views/courses/edit.html.slim
+++ b/app/views/courses/edit.html.slim
@@ -1,4 +1,4 @@
-- content_for(:page_classes, "no-recent-reports")
+- content_for(:extra_body_classes, "no-recent-reports")
 - title "コース編集"
 
 .page-header
