--- a/app/assets/stylesheets/blocks/shared/_page-nav.sass
+++ b/app/assets/stylesheets/blocks/shared/_page-nav.sass
@@ -1,5 +1,7 @@
 .page-nav
-  +position(absolute, right 0, top 0)
+  +position(right 0, top 0)
+  flex: 0 0 12rem
+  position: sticky
   background-color: $base
   width: 12rem
   border: solid 1px #dadada
@@ -8,8 +10,6 @@
   transition: opacity .2s ease-in
   &:hover
     opacity: 1
-  &.is-sticky
-    +fixed(top 0)
   +media-breakpoint-down(sm)
     display: none
 
