--- a/app/views/answers/edit.html.slim
+++ b/app/views/answers/edit.html.slim
@@ -1,4 +1,4 @@
-- content_for(:page_classes, "no-recent-reports")
+- content_for(:extra_body_classes, "no-recent-reports")
 
 header.page-header
   .container
