--- a/app/views/application/_favicons.html.erb
+++ b/app/views/application/_favicons.html.erb
@@ -1,3 +1,4 @@
+<link href="#{ image_path("favicon.ico") }" rel="shortcut icon">
 <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
