--- a/app/views/comments/new.html.slim
+++ b/app/views/comments/new.html.slim
@@ -1,5 +1,5 @@
 - title "コメント投稿"
-- content_for(:page_classes, "no-recent-reports")
+- content_for(:extra_body_classes, "no-recent-reports")
 
 header.page-header
   .container
