--- a/app/views/courses/new.html.slim
+++ b/app/views/courses/new.html.slim
@@ -1,4 +1,4 @@
-- content_for(:page_classes, "no-recent-reports")
+- content_for(:extra_body_classes, "no-recent-reports")
 - title "コース作成"
 
 header.page-header
