--- a/app/views/home/welcome.html.slim
+++ b/app/views/home/welcome.html.slim
@@ -1,4 +1,4 @@
-- content_for :page_classes, "welcome no-header no-recent-reports no-global-nav welcome-home"
+- content_for :extra_body_classes, "welcome no-header no-recent-reports no-global-nav welcome-home"
 - content_for :head_last do
   = javascript_include_tag "https://sdk.form.run/js/v2/formrun.js"
 
