--- a/app/views/inquiries/new.html.slim
+++ b/app/views/inquiries/new.html.slim
@@ -1,5 +1,5 @@
 - title "お問い合わせ"
-- content_for :page_classes, "no-header no-footer no-recent-reports no-global-nav is-auth-page is-piyo-background"
+- content_for :extra_body_classes, "no-header no-footer no-recent-reports no-global-nav is-auth-page is-piyo-background"
 
 .auth-form.is-sign-up.a-card.is-borderd
   header.auth-form__header
