--- a/app/views/practices/edit.html.slim
+++ b/app/views/practices/edit.html.slim
@@ -1,5 +1,5 @@
 - title "プラクティス編集"
-- content_for(:page_classes, "no-recent-reports")
+- content_for(:extra_body_classes, "no-recent-reports")
 
 .page-header
   .container
