--- a/app/views/products/new.html.slim
+++ b/app/views/products/new.html.slim
@@ -1,5 +1,5 @@
 - title "提出物作成"
-- content_for(:page_classes, "no-recent-reports")
+- content_for(:extra_body_classes, "no-recent-reports")
 
 header.page-header
   .container
