--- a/app/views/reports/new.html.slim
+++ b/app/views/reports/new.html.slim
@@ -1,6 +1,5 @@
 - title "日報作成"
-- content_for(:page_classes, "no-recent-reports")
-
+- content_for(:extra_body_classes, "no-recent-reports")
 header.page-header
   .container
     .page-header__container
