スクロールをjsからcssに移行
ページのパーツの出し分けをリファクタ

フォームの並び順変更

Fix Typo

テストの画面外のボタンクリック対策

テストの画面外のボタンクリック対策

テストの画面外のボタンクリック対策

テストの画面外のボタンクリック対策

test時のcssを変更

Fix typo

スクロール設定修正

テストにスクロール追加

:cop:

テストにスクロール追加

db/schema.rb 更新

テスト修正

テスト修正

テスト修正

テスト修正

testのためのsassリファクタ

--- a/app/assets/stylesheets/shared/_base.sass
+++ b/app/assets/stylesheets/shared/_base.sass
@@ -26,10 +26,19 @@ body
   +margin(horizontal, 5rem 14rem)
   overflow-y: scroll
   height: 100vh
+  scroll-behavior: smooth
+  -webkit-overflow-scrolling: touch
   +media-breakpoint-down(md)
     +margin(horizontal, 5rem 0)
+    height: auto
   +media-breakpoint-down(sm)
     +margin(horizontal, 0)
+  body.is-test &
+    height: auto
+    .test-fixed-top
+      +position(fixed, right 0, top 0)
+    .test-fixed-bottom
+      +position(fixed, right 0, bottom 0)
   body.is-edit-page &
     margin-right: 0
   body.welcome &
@@ -37,7 +46,7 @@ body
   body.no-global-nav &
     margin-left: 0
   body.no-recent-reports &,
-  body.is-admin &
+  body.is-admin-page &
     margin-right: 0
   body.is-error-page &
     padding-top: 4rem
