--- a/app/assets/stylesheets/shared/_base.sass
+++ b/app/assets/stylesheets/shared/_base.sass
@@ -28,6 +28,7 @@ body
   height: 100vh
   +media-breakpoint-down(md)
     +margin(horizontal, 5rem 0)
+    height: auto
   +media-breakpoint-down(sm)
     +margin(horizontal, 0)
   body.is-edit-page &
