--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -23,5 +23,5 @@ header.page-header
 
         .col-xs-12.col-xl-6.col-xxl-6
           = render "users/grass", user: current_user
-          - if current_user.github_account
+          - if current_user.github_account.present?
             = render "users/github_grass", user: current_user
