タブレット時のレイアウトとスクロールの修正

--- a/app/assets/stylesheets/blocks/shared/_page-nav.sass
+++ b/app/assets/stylesheets/blocks/shared/_page-nav.sass
@@ -8,6 +8,7 @@
   border-radius: .25rem
   opacity: .8
   transition: opacity .2s ease-in
+  margin-left: 1.5rem
   &:hover
     opacity: 1
   +media-breakpoint-down(sm)
