--- a/app/assets/stylesheets/shared/_base.sass
+++ b/app/assets/stylesheets/shared/_base.sass
@@ -28,11 +28,11 @@ body
   height: 100vh
   scroll-behavior: smooth
   -webkit-overflow-scrolling: touch
-  +media-breakpoint-down(md)
+  +media-breakpoint-down(lg)
     +margin(horizontal, 5rem 0)
-    height: auto
   +media-breakpoint-down(sm)
     +margin(horizontal, 0)
+    height: auto
   body.is-test &
     height: auto
     .test-fixed-top
