--- a/app/views/current_user/edit.html.slim
+++ b/app/views/current_user/edit.html.slim
@@ -3,14 +3,8 @@
 
 header.page-header
   .container
-    .page-header__inner
-      h1.page-header__title
-        = title
-      .page-header-actions
-        ul.page-header-actions__items
-          li.page-header-actions__item
-            = link_to root_path, class: "a-button is-md is-secondary is-block" do
-              | ダッシュボードに戻る
+    .page-header__container
+      .page-header__title = title
 
 .auth-form.is-sign-up.a-card.is-in-app
   header.auth-form__header
