--- a/app/views/card/_form.html.slim
+++ b/app/views/card/_form.html.slim
@@ -1,8 +1,12 @@
 - method = action == :new ? "post" : "put"
 = javascript_include_tag "https://js.stripe.com/v3/"
 = form_with url: card_path, method: method, local: true, id: "payment-form" do |f|
-  .form-row
-    label.a-label(for="card-element") カード番号
-    #card-element
-    #card-errors(role="alert")
-  button.is-button-simple-lg-warning 登録
+  .auth-form-items
+    .auth-form-item
+      label.a-label(for="card-element") カード番号
+      #card-element
+      #card-errors(role="alert")
+  .auth-form-action
+    ul.auth-form-action__items
+      li.auth-form-action__item
+        button.is-button-simple-lg-warning 登録
