--- a/app/views/card/new.html.slim
+++ b/app/views/card/new.html.slim
@@ -6,5 +6,9 @@ header.page-header
       h2.page-header__title = title
 
 .page-body
-  .container
-    = render "form", action: :new
+  .a-card.auth-form.is-sign-up.a-card.is-in-app
+    header.auth-form__header
+      h1.auth-form__title
+        | クレジットカード登録
+    .auth-form__body
+      = render "form", action: :new
