--- a/app/views/card/show.html.slim
+++ b/app/views/card/show.html.slim
@@ -1,4 +1,4 @@
-- title "クレジットカード"
+- title "登録済クレジットカード"
 
 header.page-header
   .container
@@ -7,5 +7,15 @@ header.page-header
 
 .page-body
   .container
-    | #{@card["brand"]} **** **** **** #{@card["last4"]} #{sprintf("%02d", @card["exp_month"].to_i)}/#{@card["exp_year"]}
-    = link_to "編集", edit_card_path, class: "is-button-simple-lg-warning"
+    .a-card.auth-form.is-sign-up.a-card.is-in-app
+      header.auth-form__header
+        h1.auth-form__title
+          | 登録済クレジットカード
+      .auth-form__body
+        .auth-form-items
+          .auth-form-item.is-text-align-center
+            | #{@card["brand"]} **** **** **** #{@card["last4"]} #{sprintf("%02d", @card["exp_month"].to_i)}/#{@card["exp_year"]}
+        .auth-form-action
+          ul.auth-form-action__items
+            li.auth-form-action__item
+              = link_to "編集", edit_card_path, class: "is-button-simple-lg-warning"
